[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Levels/Sprites/platform.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Levels/Level1.gd" type="Script" id=2]
[ext_resource path="res://Assets/Levels/Sprites/background.png" type="Texture" id=3]
[ext_resource path="res://Assets/Levels/Shaders/sky_color.shader" type="Shader" id=4]
[ext_resource path="res://Scenes/Levels/Sun.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Levels/Sprites/parallax.png" type="Texture" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/time = 0.0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=3]
0/name = "platform.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 768, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Level1" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
material = SubResource( 1 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 100

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 960, 216 )
scale = Vector2( 0.284519, 0.2 )
texture = ExtResource( 6 )

[node name="Spawn1" type="Node2D" parent="."]
position = Vector2( 1784, 896 )
z_index = 150

[node name="Spawn2" type="Node2D" parent="."]
position = Vector2( 192, 896 )
z_index = 150

[node name="Spawn3" type="Node2D" parent="."]
position = Vector2( 1344, 896 )
z_index = 150

[node name="Spawn4" type="Node2D" parent="."]
position = Vector2( 704, 896 )
z_index = 150

[node name="Sun" parent="." instance=ExtResource( 5 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
show_collision = true
collision_layer = 2
collision_mask = 128
format = 1
tile_data = PoolIntArray( 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0 )
